add history, unauthorized, not found pages
