# server/docs/checkout-swagger.yaml
@@ -108,6 +108,18 @@ paths:
           description: "Success"
         500:
           description: "Server Error"
+  /checkout/history/all:
+    get:
+      description: "Get Checkout All History"
+      tags:
+        - "Checkout"
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: "Success"
+        500:
+          description: "Server Error"
 components:
   schemas:
     Checkout:
@@ -133,7 +145,7 @@ components:
               productId:
                 type: string
                 example: "35732c79-4d9a-451a-a3eb-5366a9c35687"
-              quantity:
+              qty:
                 type: number
                 example: 4
   securitySchemes:
