# server/routes/checkout.route.ts
@@ -6,8 +6,9 @@ import {
     payProduct,
     getHistory,
     createHistory,
+    getHistories,
 } from '../controllers/checkout.controller';
-import { verifyUser } from '../middlewares/userAuth';
+import { verifyAdmin, verifyUser } from '../middlewares/userAuth';
 
 const router: Router = Router();
 
@@ -16,6 +17,8 @@ router.get('/provinces', getProvinces);
 router.get('/provinces/:provinceId', getCities);
 
 router.get('/checkout/cost', getShippingCost);
+
+router.get('/checkout/history/all', verifyUser, verifyAdmin, getHistories);
 
 router.get('/checkout/history', verifyUser, getHistory);
 
